Fixed text colour in collapsed and uncollapsed sections in Chromium 11's New Tab page

--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_sections.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_sections.scss
@@ -54,147 +54,144 @@
 	}
 }
 
-.sections {
-	.section {
-		cursor: pointer;
-		margin-inline-start: -14px;
-		margin-inline-end: -21px;
-		align-items: center;
-		font-size: 12pt;
-		color: var(--section-color);
+.sections .section {
+	cursor: pointer;
+	margin-inline-start: -14px;
+	margin-inline-end: -21px;
+	align-items: center;
+	font-size: 12pt;
+	color: var(--section-color);
 
-		&:hover {
-			> .section-close-button {
-				opacity: 1;
+	&:hover > .section-close-button {
+		opacity: 1;
+	}
+
+	&.collapsed + div {
+		display: flex;
+		flex-direction: row;
+		gap: 20px;
+
+		.item {
+			align-items: center;
+			max-width: 114px;
+			-moz-context-properties: fill, fill-opacity;
+			fill: var(--recently-closed-item-color);
+
+			.icon {
+				display: none;
+			}
+
+			label {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 		}
 
-		&.collapsed {
-			+ div {
-				display: flex;
-				flex-direction: row;
-				gap: 20px;
-
-				.item {
-					align-items: center;
-					max-width: 114px;
-					-moz-context-properties: fill, fill-opacity;
-					fill: var(--recently-closed-item-color);
-
-					.icon {
-						display: none;
-					}
-
-					label {
-						white-space: nowrap;
-						overflow: hidden;
-						text-overflow: ellipsis;
-					}
-				}
-			}
+		.thumbnail-container {
+			color: var(--link-color, --default-link-color);
 		}
-		&:not(.collapsed) {
-			+ div {
-				display: grid;
-				gap: 0px;
-				grid-template-columns: repeat(6, minmax(0, 1fr));
-
-				.item {
-					border-radius: 10px;
-					flex-direction: column;
-					margin: 5px 3px;
-					padding: 10px;
-					height: 136px;
-					width: 124px;
-					text-decoration: none;
-					transition: background-color .5s;
-
-					&:hover {
-						background-color: var(--app-item-background-color-hot);
-					}
-
-					> .favicon {
-						display: none;
-					}
-
-					> label {
-						font-size: 10pt;
-						text-align: center;
-					}
-				}
-			}
-
-			.disclosure {
-				transform: rotate(90deg);
-			}						
-		}
-
-		&.closed {
-			display: none;
-
-			+ div {
-				display: none !important;
-			}
-		}
-
+	}
+	&:not(.collapsed) {
 		+ div {
+			display: grid;
+			gap: 0px;
+			grid-template-columns: repeat(6, minmax(0, 1fr));
+
 			.item {
-				display: flex;
-				color: var(--link-color, --default-link-color);
+				border-radius: 10px;
+				flex-direction: column;
+				margin: 5px 3px;
+				padding: 10px;
+				height: 136px;
+				width: 124px;
+				text-decoration: none;
+				transition: background-color .5s;
+				color: var(--thumbnail-container-color);
+
+				&:hover {
+					background-color: var(--app-item-background-color-hot);
+				}
 
 				> .favicon {
-					width: 16px;
-					height: 16px;
-					margin-inline-end: 3px;
+					display: none;
 				}
 
-				> .icon {
-					margin: auto;
-					width: 96px;
-					height: 96px;
+				> label {
+					font-size: 10pt;
+					text-align: center;
 				}
 			}
 		}
 
 		.disclosure {
-			width: 9px;
-			height: 9px;
-			margin-inline-end: 5px;
-			background-image: url("chrome://userchrome/content/pages/newTabHome/assets/chrome-11/imgs/accordion-chevron.svg");
-			background-repeat: no-repeat;
-			background-position: center;
-			transition: transform .15s;
+			transform: rotate(90deg);
+		}						
+	}
+
+	&.closed {
+		display: none;
+
+		+ div {
+			display: none !important;
+		}
+	}
+
+	+ div .item {
+		display: flex;
+		color: var(--link-color, --default-link-color);
+
+		> .favicon {
+			width: 16px;
+			height: 16px;
+			margin-inline-end: 3px;
 		}
 
-		spacer {
-			height: 1px;
-			background-color: var(--spacer-background-color);
-			margin-inline: 4px;
+		> .icon {
+			margin: auto;
+			width: 96px;
+			height: 96px;
+		}
+	}
+
+	.disclosure {
+		width: 9px;
+		height: 9px;
+		margin-inline-end: 5px;
+		background-image: url("chrome://userchrome/content/pages/newTabHome/assets/chrome-11/imgs/accordion-chevron.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+		transition: transform .15s;
+	}
+
+	spacer {
+		height: 1px;
+		background-color: var(--spacer-background-color);
+		margin-inline: 4px;
+	}
+
+	button {
+		all: unset;
+	}
+
+	.section-close-button {
+		width: 21px;
+		height: 21px;
+		opacity: 0;
+
+		background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+
+		transition: opacity .15s;
+	
+		&:hover,
+		&:focus {
+			background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off_h.svg");
 		}
 
-		button {
-			all: unset;
-		}
-
-		.section-close-button {
-			width: 21px;
-			height: 21px;
-			opacity: 0;
-
-			background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off.svg");
-			background-repeat: no-repeat;
-			background-position: center;
-
-			transition: opacity .15s;
-		
-			&:hover,
-			&:focus {
-				background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off_h.svg");
-			}
-
-			&:active {
-				background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off_p.svg");
-			}
+		&:active {
+			background-image: url("chrome://userchrome/content/assets/img/chrome-1/infobar/infobar_close_off_p.svg");
 		}
 	}
 }
@@ -238,10 +235,8 @@
 			display: none;
 		}
 
-		&[open] {
-			> [id*="-menu"] {
-				display: flex;
-			}
+		&[open] > [id*="-menu"] {
+			display: flex;
 		}
 
 		> * {
